# SBE-drift-guard

./: .gitignore  README.mc  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: main.cpp
sbedg/: __init__.py  cli.py  codegen_cpp.py  diff.py  fixtures.py  schema.py
sbedg/templates/: parser.cpp.j2  parser.h.j2
schemas/: trade_v1.json  trade_v2.json
tests/: test_codegen.py  test_diff.py  test_roundtrip.py
